--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* DIMENSIONES */
 #dimensiones {
     width: 270px;
-    height: 340px;
+    height: 310px;
     border-style: ridge;
     border-width: 4px;
 }
@@ -9,21 +9,19 @@
 /* DISPLAY */
 #display {
     background-color: rgb(24, 173, 93);
-    /* background-color: #03fd88; */
     border-style: ridge;
     border-width: 4px;
     font-family: 'Press Start 2P', cursive;
-    font-size: 12px;
-
+    font-size: 11px;
 }
 
 #cronometro {
     font-size: 21px;
 }
 
-hr{
-    margin-top: 5px;
-}
+/* hr{
+    margin-top: 1px;
+} */
 
 /* BOTONES */
 .btn {
